--- a/project15/templates/base.html
+++ b/project15/templates/base.html
@@ -19,17 +19,25 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="{% url 'home' %}">Home</a>
+              </li>
+              {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link text-white" href="{% url 'user_profile' %}">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Features</a>
+                <a class="nav-link text-white" href="{% url 'user_logout' %}">Logout</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link text-white" href="{% url 'user_login' %}">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Pricing</a>
+                <a class="nav-link text-white" href="{% url 'register' %}">Register</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled text-white" aria-disabled="true">Disabled</a>
-              </li>
+              {% endif %}
+              
+              
             </ul>
           </div>
         </div>
